objects/LoyaltyActivity__c.object
<CustomObject>
    <fields>
        <fullName>ActivityCategory__c</fullName>
        <label>Activity Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ActivityCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>JournalSubType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal SubType</label>
        <referenceTo>JournalSubType</referenceTo>
        <relationshipName>LoyaltyActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PointsAccrued__c</fullName>
        <label>Points Accrued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Engagement Activity</label>
    <listViews>
        <fullName>All_Engagement_Activity</fullName>
        <columns>NAME</columns>
        <columns>ActivityCategory__c</columns>
        <columns>JournalSubType__c</columns>
        <columns>PointsAccrued__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Engagement Activity</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>